Criado e implementado user cliente, documentado cliente e sistema
